<resources>
    <string name="app_name">boostlingo</string>
    <string name="region">Region</string>
    <string name="token">Token</string>
    <string name="initialize">Initialize</string>
    <string name="language_from">Language From</string>
    <string name="language_to">Language To</string>
    <string name="service_type">Service Type</string>
    <string name="gender">Gender</string>
    <string name="company_id">Company Id</string>
    <string name="voice_call">Voice Call</string>
    <string name="hang_up">Hang Up</string>
    <string name="mute">Mute</string>
    <string name="speaker">Speaker</string>
    <string name="call_details">Call Details</string>
    <string name="room_status">status</string>
    <string name="permissions_needed">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="video_call">Video Call</string>
    <string name="send_test_message">Send Test Message</string>
    <string name="ai_call">AI Interpreter Call</string>
    <string name="interrupt">Interrupt AI</string>
</resources>